<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.multipong.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_statement"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginTop="31dp"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="15sp"
        app:srcCompat="@drawable/ball"
        android:id="@+id/bouncing_ball"
        android:layout_height="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/play_button"
        android:layout_alignEnd="@+id/play_button"
        android:contentDescription="@string/bounce_descr"/>

    <EditText
        android:id="@+id/player_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/name_placeholder"
        android:layout_above="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/play_button"
        android:text="@string/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"/>

    <TextView
        android:id="@+id/credits_tv"
        android:text="@string/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:clickable="true"/>
</RelativeLayout>
